[package]
name = "psi"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "psi"
path = "src/bin/main.rs"

[lib]
name = "psi"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    #"psi-proc-macro",
    #"psi-proc-macro-tests"
]

[dependencies]
dyn-clonable = "0.9.0"
lazy_static = "1.4.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
