[package]
name = "psi-parser"
description = "A parser aiming to trade performance for ease of use."
authors = ["Kethas <kethas@asphyx.dev>"]
version = "0.2.2"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/Kethas/psi"
readme = "README.md"
keywords = ["parser", "parsing"]
categories = ["parsing"]

include = ["**/*.rs", "Cargo.toml"]

[dependencies]
derive_more = "0.99.17"
