[package]
name = "psi-parser"
description = "A parser aiming to trade performance for ease of use."
authors = ["Kethas <kethas@asphyx.dev>"]
version = "0.2.7"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/Kethas/psi"
readme = "README.md"
keywords = ["parser", "parsing"]
categories = ["parsing"]

include = ["**/*.rs", "Cargo.toml"]

[features]

default = ["included_parsers", "file_input"]

# included parsers (src/rules)
included_parsers = []

file_input = ["dep:utf8-chars"]
tcp_input = ["dep:utf8-chars"]

[dependencies]
derive_more = "0.99.17"
env_logger = "0.10.1"
log = "0.4.20"
utf8-chars = { version = "3.0.1", optional = true }
